2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* data/glade/open-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* data/glade/save-dialog.glade:
	* data/glade/spellcheck-dialog.glade:
	Set translatability of gtk-* labels to false.
	Split preview command fields label in the preferences dialog to
	translatable and non-translatable labels.

	* setup.py:
	Remove no longer existing icons from data_files.

	* tools/add-changelog:
	* tools/generate-tests:
	* tools/hide:
	* tools/list-glade:
	* tools/nose-run:
	* tools/pydoctor:
	* tools/pylint:
	Get rid of bashisms and use /bin/sh.

	* tools/translate:
	Extract strings directly from Glade XML files.

2007-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/__init__.py:
	Copy defaults dictionary in __init__.restore_defaults instead
	of Container.update in order to save correct configuration.

2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/unittest/case.py:
	Try to make the gtk unittests a little bit faster.

2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/util.py:
	Fix more configuration variable renames.

2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* gaupol/gtk/view.py:
	Fix configuration variable renames missed in previous commit.

2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* gaupol/gtk/actions/position.py:
	* gaupol/gtk/actions/spellcheck.py:
	* gaupol/gtk/actions/view.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/preview.py:
	* gaupol/gtk/agents/view.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/preferences.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	* gaupol/gtk/dialogs/textedit.py: